# kamojirOS

./: .gitignore  README.md  cspell.json  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/: kamojiros.db  main.py
src/kamojiros/: main.py  models.py
src/kamojiros/apps/: __init__.py
src/kamojiros/apps/misskey_ingestor/: __init__.py  main.py
src/kamojiros/apps/self_observer/: __init__.py  main.py
src/kamojiros/cli/: create.py  formatters.py  list.py  search.py  stats.py
src/kamojiros/config/: __init__.py  base_settings.py  settings.py
src/kamojiros/core/: naming.py  time.py
src/kamojiros/infrastructure/: __init__.py
src/kamojiros/infrastructure/git/: __init__.py  markdown_report_writer.py
src/kamojiros/infrastructure/misskey/: __init__.py  client.py
src/kamojiros/interfaces/: __init__.py  reports.py
src/kamojiros/services/: __init__.py  report_service.py  self_observer_service.py
tests/: test_sample.py
tests/infrastructure/misskey/: __init__.py  test_client.py
tests/kamojiros/: __init__.py  test_cli.py
tests/kamojiros/infrastructure/: __init__.py
tests/kamojiros/infrastructure/git/: __init__.py  test_markdown_report_repository.py  test_markdown_report_writer.py
tests/kamojiros/services/: test_self_observer_service.py
