[project]
name = "kamojirOS"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "bs4>=0.0.2",
    "codespell>=2.4.1",
    "lxml>=6.0.2",
    "nodeenv>=1.9.1",
    "nox>=2025.10.16",
    "nox-uv>=0.6.3",
    "pyright>=1.1.407",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "ruff>=0.14.4",
    "watchfiles>=1.1.1",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kamojiros"]

[project.scripts]
kamojiros = "kamojiros.main:main"


[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".pytest_cache",
    ".venv",
]

line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D203", "D213", "COM812", "TD003", "FIX", "FBT"]
allowed-confusables = ["！","？", "（", "）"]
unfixable = []

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pylint]
max-args = 15
max-positional-args = 5

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "SLF001"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
